[gd_scene load_steps=25 format=3 uid="uid://jllmtcbv228d"]

[ext_resource type="Script" path="res://Scripts/testLevel.gd" id="1_o1vrm"]
[ext_resource type="PackedScene" uid="uid://jxq0tqjk3anq" path="res://Scenes/bee_character.tscn" id="2_yhk1x"]
[ext_resource type="PackedScene" uid="uid://bifsqvk80gj3y" path="res://Scenes/base_boss.tscn" id="3_ok2be"]
[ext_resource type="PackedScene" uid="uid://bgvk44kiikdnm" path="res://Scenes/black_bear_boss.tscn" id="4_e4g41"]
[ext_resource type="Texture2D" uid="uid://cgf8ov0ppears" path="res://Assets/temp/test_grass.svg" id="4_qqyeg"]
[ext_resource type="Texture2D" uid="uid://rq1ehongbgu6" path="res://Assets/temp/forest_bg.png" id="5_5w62o"]
[ext_resource type="Texture2D" uid="uid://chx0umwv0nyxi" path="res://Assets/temp/forest_bg3.png" id="6_qx5hr"]
[ext_resource type="Texture2D" uid="uid://cymsjf3nhor8g" path="res://Assets/temp/forest_bg2.png" id="7_p6oaf"]
[ext_resource type="Texture2D" uid="uid://djmi0mpccudcp" path="res://Assets/temp/forest_bg1.png" id="8_jkere"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_wgv40"]
sky_top_color = Color(0.643137, 0.772549, 0.686275, 1)
sky_horizon_color = Color(0.643137, 0.772549, 0.686275, 1)
ground_bottom_color = Color(0.643137, 0.772549, 0.686275, 1)
ground_horizon_color = Color(0.643137, 0.772549, 0.686275, 1)

[sub_resource type="Sky" id="Sky_k3y21"]
sky_material = SubResource("ProceduralSkyMaterial_wgv40")

[sub_resource type="Environment" id="Environment_w75vx"]
background_mode = 2
sky = SubResource("Sky_k3y21")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wvf7m"]
albedo_color = Color(0.266667, 0.439216, 0.176471, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vq6le"]
load_path = "res://.godot/imported/test_grass.svg-68bfe7b14500081f8388d6b50feab785.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6xocq"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("CompressedTexture2D_vq6le")
uv1_scale = Vector3(0.245, 0.245, 0.245)
uv1_offset = Vector3(0, 0.49, 0)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="CylinderMesh" id="CylinderMesh_jux0y"]
material = SubResource("StandardMaterial3D_6xocq")
top_radius = 4.0
bottom_radius = 4.0
height = 1.5
cap_top = false
cap_bottom = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cwc5o"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
shading_mode = 0
albedo_texture = ExtResource("4_qqyeg")
uv1_scale = Vector3(0.25, 0.25, 0.25)
uv1_offset = Vector3(-2.57, 0.49, 0)
uv1_triplanar = true
texture_filter = 0

[sub_resource type="CylinderMesh" id="CylinderMesh_f1wxd"]
material = SubResource("StandardMaterial3D_cwc5o")
flip_faces = true
cap_top = false
cap_bottom = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g2rwl"]
transparency = 2
alpha_scissor_threshold = 0.875
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("6_qx5hr")
uv1_scale = Vector3(3.5, 3.5, 3.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_5ssso"]
material = SubResource("StandardMaterial3D_g2rwl")
flip_faces = true
top_radius = 40.0
bottom_radius = 40.0
height = 150.0
radial_segments = 72
cap_top = false
cap_bottom = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gce4h"]
transparency = 2
alpha_scissor_threshold = 0.875
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("7_p6oaf")
uv1_scale = Vector3(3.5, 3.5, 3.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_gcg1t"]
material = SubResource("StandardMaterial3D_gce4h")
flip_faces = true
top_radius = 50.0
bottom_radius = 50.0
height = 150.0
cap_top = false
cap_bottom = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sv2p0"]
transparency = 2
alpha_scissor_threshold = 0.875
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("8_jkere")
uv1_scale = Vector3(3.5, 3.5, 3.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_lhtvm"]
material = SubResource("StandardMaterial3D_sv2p0")
flip_faces = true
top_radius = 60.0
bottom_radius = 60.0
height = 150.0
cap_top = false
cap_bottom = false

[node name="testLevel" type="Node3D"]
script = ExtResource("1_o1vrm")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_w75vx")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="levelRing" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="platform" type="CSGCylinder3D" parent="levelRing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
material = SubResource("StandardMaterial3D_wvf7m")

[node name="hole" type="CSGCylinder3D" parent="levelRing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
operation = 2

[node name="testCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 10, 20)

[node name="beeCharacter" parent="." instance=ExtResource("2_yhk1x")]

[node name="baseBoss" parent="." instance=ExtResource("3_ok2be")]

[node name="blackBearBoss" parent="." instance=ExtResource("4_e4g41")]

[node name="fightTimer" type="Timer" parent="."]
one_shot = true

[node name="frontRing" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
cast_shadow = 0
mesh = SubResource("CylinderMesh_jux0y")

[node name="backRing" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
cast_shadow = 0
mesh = SubResource("CylinderMesh_f1wxd")

[node name="backgrounds" type="Node3D" parent="."]
visible = false

[node name="forestBG1" type="Sprite3D" parent="backgrounds"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40)
visible = false
cast_shadow = 0
pixel_size = 0.1
transparent = false
texture_filter = 2
texture = ExtResource("5_5w62o")

[node name="forestBG2" type="Sprite3D" parent="backgrounds"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -40)
visible = false
cast_shadow = 0
pixel_size = 0.1
transparent = false
texture_filter = 2
texture = ExtResource("5_5w62o")

[node name="forestBG3" type="Sprite3D" parent="backgrounds"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -40, 0, -1.74846e-06)
visible = false
cast_shadow = 0
pixel_size = 0.1
transparent = false
texture_filter = 2
texture = ExtResource("5_5w62o")

[node name="forestBG4" type="Sprite3D" parent="backgrounds"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 40, 0, 1.74846e-06)
visible = false
cast_shadow = 0
pixel_size = 0.1
transparent = false
texture_filter = 2
texture = ExtResource("5_5w62o")

[node name="forestBG5" type="Sprite3D" parent="backgrounds"]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -28.2843, 0, 28.2843)
visible = false
cast_shadow = 0
pixel_size = 0.1
transparent = false
texture_filter = 2
texture = ExtResource("5_5w62o")

[node name="forestBG6" type="Sprite3D" parent="backgrounds"]
transform = Transform3D(-0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, -0.707107, 28.2843, 0, -28.2843)
visible = false
cast_shadow = 0
pixel_size = 0.1
transparent = false
texture_filter = 2
texture = ExtResource("5_5w62o")

[node name="forestBG7" type="Sprite3D" parent="backgrounds"]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -28.2843, 0, -28.2843)
visible = false
cast_shadow = 0
pixel_size = 0.1
transparent = false
texture_filter = 2
texture = ExtResource("5_5w62o")

[node name="forestBG8" type="Sprite3D" parent="backgrounds"]
transform = Transform3D(0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 28.2843, 0, 28.2843)
visible = false
cast_shadow = 0
pixel_size = 0.1
transparent = false
texture_filter = 2
texture = ExtResource("5_5w62o")

[node name="backgrounds2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="backgrounds2"]
cast_shadow = 0
mesh = SubResource("CylinderMesh_5ssso")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="backgrounds2"]
cast_shadow = 0
mesh = SubResource("CylinderMesh_gcg1t")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="backgrounds2"]
visible = false
cast_shadow = 0
mesh = SubResource("CylinderMesh_lhtvm")

[connection signal="timeout" from="fightTimer" to="." method="_on_fight_timer_timeout"]
